[package]
name = "rtx-common"
version = "2023.11.8"
edition = "2021"
include = ["/src/**/*"]

[dependencies]
eyre = "<1"
log = "<1"
once_cell = "1"
regex = "1"
sha2 = "<1"
reqwest = {version="<1", default_features = false, features=["gzip", "blocking", "json"]}
flate2 = "1"
dirs-next = "2"
tar = "<1"

[dev-dependencies]
insta = "<1"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
rustls-native-roots = ["reqwest/rustls-tls-native-roots"]
