[package]
name = "gimme-cli"
version = "2023.11.8"
edition = "2021"

[[bin]]
name = "gimme"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
env_logger = "<1"
eyre = "<1"
flate2 = "1"
log = "<1"
once_cell = "1"
regex = "1"
rtx-common = { path = "../common" }
rtx-lib = { path = "../lib" }
tar = "<1"
tempfile = "3"
