[package]
name = "rtx-lib"
version = "2023.11.6"
edition = "2021"
include = [
    "/src/**/*.rs",
    "/build.rs",
    "/LICENSE",
]

[lib]
name = "rtx"

[dependencies]
eyre = "<1"
log = "<1"
once_cell = "1"
regex = "1"
rtx-common = {path="../common"}
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"
which = "5.0.0"
url = "2.5.0"

[build-dependencies]
built = {version="<1", features=["chrono", "git2"]}

[features]
default = ["native-tls"]
native-tls = ["rtx-common/native-tls"]
rustls = ["rtx-common/rustls"]
rustls-native-roots = ["rtx-common/rustls-native-roots"]
